third_party/move/move-compiler-v2/tests/checking/typing/vector_mismatched_args.exp

Diagnostics:
error: `integer` not compatible with `bool` in vector expression
  ┌─ tests/checking/typing/vector_mismatched_args.move:7:19
  │
7 │         vector[0, false];
  │                   ^^^^^

error: expected `u64` but found `u8` in vector expression
  ┌─ tests/checking/typing/vector_mismatched_args.move:8:21
  │
8 │         vector[0u8, 0u64, 0u128];
  │                     ^^^^

error: `integer` not compatible with `address` in vector expression
  ┌─ tests/checking/typing/vector_mismatched_args.move:9:19
  │
9 │         vector[0, @0];
  │                   ^^

error: expected `Test::Y` but found `Test::X` in vector expression
   ┌─ tests/checking/typing/vector_mismatched_args.move:10:21
   │
10 │         vector[X{}, Y{}];
   │                     ^^^

error: `integer` not compatible with `bool` in vector expression
   ┌─ tests/checking/typing/vector_mismatched_args.move:11:20
   │
11 │         vector[&0, &false];
   │                    ^^^^^^
